maybe a fix to wrapping issue?

--- a/css/index.css
+++ b/css/index.css
@@ -25,14 +25,16 @@
 
 #welcome{
     display: flex;
-    flex-direction: row;
+	flex-wrap: wrap;
 }
 
 #welcome-color, #title h2{
-    color: var(--color5);   
+    color: var(--color5); 
 }
+
 #title h2{
     font-size: 18px;
+	text-wrap: wrap;
 }
 
 .button a{
@@ -106,7 +108,6 @@
 	border-radius: 50%;
   border: 20px solid var(--color4); 
   bottom: -800px;
-
 }
 
 .circles li:nth-child(4) {
